objects/CSS_For_Marquee__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To display Marquee text on Home page</description>
    <fields>
        <fullName>Marquee_Text1__c</fullName>
        <label>Marquee_Text1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marquee_Text2__c</fullName>
        <label>Marquee_Text2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marquee_Text3__c</fullName>
        <label>Marquee_Text3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>CSS_Marquee</label>
</CustomObject>